--- a/content/css/style.css
+++ b/content/css/style.css
@@ -380,7 +380,7 @@
 .nav_sub{opacity: 1;position: absolute;top: 100%;left: -125px;width: 500px;background: #fff;padding: 20px 0 10px;display: flex;justify-content: flex-start;flex-direction: row;}
 #new_header_container .sub_nav li:hover .nav_sub{opacity:1;}
 #new_header_container .nmbHover .sub_nav li .nav_sub li span{padding: 0 20px 0 0;color: #999;}
-#new_header_container .nmbHover .sub_nav li .nav_sub li:hover span{color: #333}
+#new_header_container .nmbHover .sub_nav li .nav_sub li:hover span,#new_header_container .nmbHover .sub_nav li .nav_sub li.cnav span{color: #333}
 #new_footer_container{width:100%;height:65px;background:#fff;/*margin-top:25px;*/margin-top:70px;}
 #new_footer_container p{width:1100px;margin:0 auto;border-top:1px solid #e3e3e3;text-align:center;line-height:65px;font-size:13px;color:#a9a9a9;}
 
